--- a/wiki/ProjectStatus.wiki
+++ b/wiki/ProjectStatus.wiki
@@ -26,10 +26,10 @@ has had a chance to play with it.
 || *Task* || *Status* || *Target/Actual completion date* ||
 || Ability to parse and generate XFire protocol messages || Complete ||  March 23rd 2007 ||
 || Classes to manage a TCP/IP connection for sending/receiving messages to the XFire server || Complete || April 27th 2007 ||
-|| Representation and maintenance of the buddy list || In Progress || May 26th 2007 ||
-|| Successfully establish and control a connection with the XFire server || Pending || May 26th 2007 ||
-|| Ability to communicate over UDP with other XFire clients|| Pending || 8th June 2007 ||
-|| Representation and maintenance of conversations with other XFire users || Pending || 15th June 2007 ||
+|| Representation and maintenance of the buddy list || Complete || May 26th 2007 ||
+|| Successfully establish and control a connection with the XFire server || Complete || May 26th 2007 ||
+|| Ability to communicate over UDP with other XFire clients|| Not relevant for now, TCP suffices || N/A ||
+|| Representation and maintenance of conversations with other XFire users || Completed || 15th June 2007 ||
 || Introduction of friend "classes", offline-configured || Pending || 22nd June 2007 ||
 || Basic "admin to user" message relay || Pending || 29th June 2007 ||
 || "user to on-duty admin" relay || Pending || 6th July 2007 ||
