--- a/wiki/ProjectStatus.wiki
+++ b/wiki/ProjectStatus.wiki
@@ -30,7 +30,7 @@ has had a chance to play with it.
 || Successfully establish and control a connection with the XFire server || Complete || May 26th 2007 ||
 || Ability to communicate over UDP with other XFire clients|| Not relevant for now, TCP suffices || N/A ||
 || Representation and maintenance of conversations with other XFire users || Completed || 15th June 2007 ||
-|| Introduction of friend "classes", offline-configured || Pending || 22nd June 2007 ||
-|| Basic "admin to user" message relay || Pending || 29th June 2007 ||
-|| "user to on-duty admin" relay || Pending || 6th July 2007 ||
-|| Auto-accept invites || Pending || 11th July 2007 ||
+|| Introduction of friend "classes", offline-configured || Completed || 22nd June 2007 ||
+|| Basic "admin to user" message relay || Completed || 29th June 2007 ||
+|| "user to on-duty admin" relay || In Progress || 6th July 2007 ||
+|| Auto-accept invites || Completed || 12th July 2007 ||
